# low-level

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Toolchain.cmake
.github/workflow/: code-quality.yml
.github/workflows/: code-quality.yml
cmake/: CMSIS.cmake  HAL.cmake  Toolchain.cmake
cmake/HAL/: Common.cmake  G4.cmake
cmake/Toolchain/: FetchArmGccToolchainInfo.cmake
src/: stm32g4xx_hal_conf.h
src/app/: CMakeLists.txt  dc_motor.hpp  main.cpp  physical_state.hpp  quad_encoder.hpp
src/hal/: stm32g4xx_hal_conf.h
test/unit/: CMakeLists.txt  main.cpp  my_test.cpp
